# vkEngine

./: .clang-format  .clang-tidy  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  premake5.lua  vcpkg.json
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
include/string/: string.h
include/ve/: dim.h  first_app.h  window.h
source/: buffer.h  first_app.c  hello.c  lib.c  lib.h  main.c  maybe.h  window.c
test/: CMakeLists.txt
test/source/: vkEngine_test.cpp
